message DeployAntennaCommandPayload {
  required fixed32 deploy_antenna = 1;
}